fix left tooltips and project clipping issue

--- a/web/global-styles.css
+++ b/web/global-styles.css
@@ -227,8 +227,8 @@ input {
 
 .tooltip.tooltip-left .tooltiptext {
     top: 100%;
-    right: -5.75em;
-    transform: translate(0, 0);
+    right: 0;
+    transform: translate(-50%, 0);
 }
 
 .tooltip.tooltip-left .tooltiptext::after {
@@ -261,7 +261,7 @@ input {
         opacity: 1;
         transition: opacity 0.3s ease-out, transform 0.15s ease-out;
         transition-behavior: allow-discrete;
-        transform: translate(-50%, -10%);
+        /* transform: translate(-50%, -10%); */
     }
 }
 
